force-app/main/default/objects/vlocity_cmt__FieldsLookupConfiguration__c/vlocity_cmt__FieldsLookupConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FieldsLookupConfiguration</label>
</CustomObject>