force-app/main/default/objects/vlocity_cmt__FieldsLookupConfiguration__c/fields/vlocity_cmt__FieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FieldName__c</fullName>
    <description>Name of the field for which lookup icon will be shown</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>