force-app/main/default/objects/vlocity_cmt__FieldsLookupConfiguration__c/fields/vlocity_cmt__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Object_Name__c</fullName>
    <description>Object of the field</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>