force-app/main/default/objects/vlocity_cmt__FieldsLookupConfiguration__c/fields/vlocity_cmt__Popup_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Popup_Page_Id__c</fullName>
    <description>Id of the page which will be opened in the popup</description>
    <label>Popup Page Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>